<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Student Activity Mgt</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="student_name_text">Student Name</string>
    <string name="student_id_text">Student Id</string>
    <string name="student_dep_text">Department</string>
    <string name="password_text">Password</string>
    <string name="delete_btn_text">Delete</string>
    <string name="insert_text_btn">Insert</string>
    <string name="update_btn_tex">Update</string>
    <string name="search_btn_text">Search</string>
    <string name="clear_btn_text">Clear</string>
    <string name="view_btn_text">View</string>
    <string name="admin_id_text"></string>
    <color name="green">#00ff00</color>
    <string name="make_schedule_text">Make Schedule</string>
    <string name="view_schedule_text">View Schedule</string>
    <string name="edit_sch_text">Edit SCedule</string>
    <string name="view_student_activiy">View Student Activiy</string>
    <color name="black">#000</color>

</resources>
