<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Student_Manage_Activity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/sid_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/st_name_et"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:hint="@string/student_id_text"
            android:inputType="text" />

        <EditText
            android:id="@+id/st_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/student_name_text"
            android:inputType="text" />

        <EditText
            android:id="@+id/st_depart_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/sid_et"
            android:ems="10"
            android:hint="@string/student_dep_text"
            android:inputType="text" />

        <EditText
            android:id="@+id/st_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_text"
            android:inputType="textPassword" />

        <requestFocus />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_weight="0.01"
        android:orientation="vertical" >

        <Button
            android:id="@+id/clr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/del"
            android:layout_alignBottom="@+id/del"
            android:layout_alignLeft="@+id/serach"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_style"
            android:text="@string/clear_btn_text" />

        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/vview"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_style"
            android:text="@string/update_btn_tex" />

        <Button
            android:id="@+id/serach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/update"
            android:layout_alignBottom="@+id/update"
            android:layout_marginLeft="19dp"
            android:layout_toRightOf="@+id/update"
            android:background="@drawable/btn_style"
            android:text="@string/search_btn_text" />

        <Button
            android:id="@+id/del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/insert"
            android:layout_alignBottom="@+id/insert"
            android:layout_alignLeft="@+id/update"
            android:layout_alignRight="@+id/update"
            android:background="@drawable/btn_style"
            android:text="@string/delete_btn_text" />

        <Button
            android:id="@+id/insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="67dp"
            android:layout_toLeftOf="@+id/del"
            android:background="@drawable/btn_style"
            android:text="@string/insert_text_btn" />

        <Button
            android:id="@+id/vview"
            style="@style/styleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/insert"
            android:layout_below="@+id/insert"
            android:layout_marginTop="28dp"
            android:background="@drawable/btn_style"
            android:text="@string/view_btn_text" />
    </RelativeLayout>

</LinearLayout>